# olio-ohjelmointi-2025

./: README.md
1h_2/: CMakeLists.txt
1h_3/: CMakeLists.txt
1h_4/: CMakeLists.txt
1h_5/: CMakeLists.txt  main.cpp
1h_6/: CMakeLists.txt  main.cpp
H2a/: car.cpp  car.h  main.cpp  rectangle.cpp  rectangle.h  student.cpp  student.h
H2b/: car.cpp  car.h  main.cpp
H3a/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
H3b/: animal.cpp  dog.cpp  main.cpp
H4/: car.cpp  car.h  engine.cpp  engine.h  main.cpp  wheel.cpp  wheel.h
H5/: CMakeLists.txt  classa1.h  classa2.h  main.cpp
H6a/: CMakeLists.txt  main.cpp  myclass.cpp  myclass.h
h1/: main.cpp
h6b/: CMakeLists.txt  exampleclass.cpp  exampleclass.h  main.cpp
h7/: mainwindow.cpp  mainwindow.ui
